# qsiesta

./: .gitignore  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json.example  LICENSE  Procrastination.json.in  README.md
.github/workflows/: build_cmake.yml
src/: QMLFiles.qrc  QSiesta.json  Resource.qrc  procrastination.cpp  procrastinationConstants.h  procrastinationTr.h  qsiesta.cpp  qsiestaConstants.h  qsiestaTr.h
src/MiniGames/: CMakeLists.txt  README.md  minigameRegister.hpp  minigamesDefines.h
src/MiniGames/Base/: gameManagerBase.cpp  gameManagerBase.h
src/MiniGames/Games/Snake/: CMakeLists.txt  Snake.qrc  snakeDefines.h
src/MiniGames/Games/Snake/GameField/: gameField.cpp  gameField.h
src/MiniGames/Games/Snake/GameManager/: gameManager.cpp  gameManager.h
src/MiniGames/Games/Snake/Snake/: snake.cpp  snake.h
src/MiniGames/Games/Snake/qml/: QMGameField.qml  QMGameOverlay.qml  QMSnakeGame.qml
src/MiniGames/MiniGamesManager/: miniGamesManager.cpp  miniGamesManager.h
src/NavigationWidget/: navigationWidget.cpp  navigationWidget.h  navigationWidgetFactory.cpp  navigationWidgetFactory.h  viewsModel.cpp  viewsModel.h
src/WebView/: webViewBase.cpp  webViewBase.h  webViewRegister.hpp
src/WebView/macOS/: webView.h  webView.mm
src/qml/: main.qml
src/qml/controls/webView/: WebView.qml
src/qml/controls/webView/+macos/: WebView.qml
src/qml/views/: QMGameView.qml  QMTikTokView.qml  QMWebView.qml
